# job-aggregator

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  plugin_request.md
.github/workflows/: ci.yml  publish.yml
docs/: README.md  credentials_format.md  output_schema.md  plugin_authoring.md  preflight-smoke-test-results.md
docs/examples/: sample-output.jsonl
docs/superpowers/plans/: 2026-04-23-job-aggregator-v1-execution-plan.md
docs/superpowers/specs/: 2026-04-23-job-aggregator-design.md
scripts/: preflight_smoke.py
src/job_aggregator/: __init__.py  base.py  normalizer.py  orchestrator.py  registry.py  schema.py
src/job_aggregator/cli/: __main__.py  jobs.py
src/job_aggregator/plugins/: __init__.py
src/job_aggregator/plugins/adzuna/: __init__.py
src/job_aggregator/plugins/arbeitnow/: plugin.py
src/job_aggregator/plugins/himalayas/: plugin.py
src/job_aggregator/plugins/jobicy/: plugin.py
src/job_aggregator/plugins/jooble/: plugin.py
src/job_aggregator/plugins/jsearch/: __init__.py
src/job_aggregator/plugins/remoteok/: __init__.py
src/job_aggregator/plugins/remotive/: plugin.py
src/job_aggregator/plugins/the_muse/: plugin.py
src/job_aggregator/plugins/usajobs/: plugin.py
tests/: test_auto_register.py  test_base_abc.py  test_cli_jobs.py  test_cli_sources.py  test_envelope.py  test_errors.py  test_hydrator.py  test_normalizer.py  test_orchestrator.py  test_plugin_contract.py  test_preflight_smoke.py  test_registry.py  test_schema.py  test_scraping.py  test_smoke.py
tests/cli/: test_hydrate_cli.py  test_jobs_cli.py
tests/fixtures/plugins/: stub_plugins.py
tests/sources/adzuna/: conftest.py  test_adzuna.py  test_adzuna_integration.py
tests/sources/adzuna/cassettes/test_adzuna_integration/: test_normalised_record_has_required_fields.yaml  test_pages_returns_at_least_one_record.yaml
tests/sources/arbeitnow/: test_arbeitnow.py  test_arbeitnow_integration.py
tests/sources/arbeitnow/cassettes/test_arbeitnow_integration/: test_first_page_returns_listings.yaml  test_normalise_real_listing_has_required_fields.yaml
tests/sources/himalayas/: test_himalayas.py  test_himalayas_integration.py
tests/sources/himalayas/cassettes/test_himalayas_integration/: test_normalised_record_has_required_fields.yaml  test_normalised_record_url_is_application_link.yaml  test_pages_yields_at_least_one_page.yaml
tests/sources/jobicy/: test_jobicy.py  test_jobicy_integration.py
tests/sources/jobicy/cassettes/test_jobicy_integration/: test_normalise_produces_valid_record_shape.yaml  test_pages_yields_at_least_one_listing.yaml
tests/sources/jooble/: conftest.py  test_jooble.py  test_jooble_integration.py
tests/sources/jooble/cassettes/: test_normalised_listing_has_required_keys.yaml  test_pages_returns_at_least_one_listing.yaml  test_total_pages_returns_positive_integer.yaml
tests/sources/jsearch/: test_jsearch.py  test_jsearch_integration.py
tests/sources/jsearch/cassettes/test_jsearch_integration/: test_normalised_record_has_required_fields.yaml  test_pages_returns_results.yaml
tests/sources/remoteok/: test_remoteok.py  test_remoteok_integration.py
tests/sources/remoteok/cassettes/test_remoteok_integration/: test_normalise_html_stripped_in_description.yaml  test_pages_returns_at_least_one_listing.yaml  test_pages_skips_metadata_element.yaml
tests/sources/remotive/: test_remotive.py  test_remotive_integration.py
tests/sources/remotive/cassettes/test_remotive_integration/: test_pages_returns_listings_from_cassette.yaml  test_pages_with_category_filter.yaml
tests/sources/the_muse/: test_the_muse.py  test_the_muse_integration.py
tests/sources/the_muse/cassettes/test_the_muse_integration/: test_live_search_returns_records.yaml
tests/sources/usajobs/: conftest.py  test_usajobs.py  test_usajobs_integration.py
tests/sources/usajobs/cassettes/test_usajobs_integration/: test_normalise_produces_valid_job_record.yaml  test_pages_returns_at_least_one_listing.yaml
