[project]
name = "job-aggregator"
version = "0.1.0"
description = "Reusable job aggregation library: pluggable source plugins, normalized output, no scoring or DB dependencies."
readme = "README.md"
authors = [{ name = "Christopher Beaulieu" }]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]
keywords = [
    "jobs",
    "job-aggregation",
    "scraping",
    "cli",
    "plugins",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]

[project.urls]
Homepage = "https://github.com/cbeaulieu-gt/job-aggregator"
Repository = "https://github.com/cbeaulieu-gt/job-aggregator"
Issues = "https://github.com/cbeaulieu-gt/job-aggregator/issues"
Changelog = "https://github.com/cbeaulieu-gt/job-aggregator/blob/main/CHANGELOG.md"
Documentation = "https://github.com/cbeaulieu-gt/job-aggregator"

[project.scripts]
job-aggregator = "job_aggregator.cli.__main__:main"

[project.entry-points."job_aggregator.plugins"]
# Plugin entry-points are registered here by subsequent issues (B1-B10).
# Third-party plugins may also register here via their own pyproject.toml.
# Example: adzuna = "job_aggregator.plugins.adzuna:AdzunaSource"
remotive = "job_aggregator.plugins.remotive:Plugin"

# ---------------------------------------------------------------------------
# Dependency groups (PEP 735 — read natively by uv)
# ---------------------------------------------------------------------------

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "deptry",
    "pytest",
    "pytest-recording",
    "pip-audit",
    "pre-commit",
    "python-dotenv>=1.0",
    "types-requests>=2.31",
]

# ---------------------------------------------------------------------------
# Build system
# ---------------------------------------------------------------------------

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_aggregator"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
# Defaults are fine: double quotes, spaces, auto line-ending.

# ---------------------------------------------------------------------------
# Mypy — strict type checking
# ---------------------------------------------------------------------------

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

# scripts/ contains dev-only CLI tools; they import dev dependencies
# (python-dotenv) that are not in [project].dependencies.  Allow those
# imports without raising a missing-stub error.
[[tool.mypy.overrides]]
module = ["dotenv"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# deptry — import / dependency hygiene
# ---------------------------------------------------------------------------

[tool.deptry]
# src/ is the default scan root; no extra config required.
# deptry will flag any import in src/ that is not declared in
# [project].dependencies or the Python stdlib — enforcing the
# no-DB / no-framework / no-LLM constraint from the design spec.
#
# DEP002 (declared but not yet used): requests and beautifulsoup4 are
# declared as runtime deps per the design spec but are not yet imported
# in this skeleton.  They will be consumed by Issues B1-B10 (plugins)
# and Issue E (scraping).  Remove this ignore once those issues land.
ignore = ["DEP002"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
